--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <script data-main="../js/slidebar/main" src="../plugins/require.js"></script>
 </head>
 <body>
 
